# scripts

./: README.md  rebaptizer
sources/: mkbkp  rebaptizer  screenshot
sources/rebaptizer/: pyproject.toml
sources/rebaptizer/src/rebaptizer/: __init__.py  __main__.py
sources/watermark/: README.md  __init__.py  __main__.py  app.py  argparser.py  defines.py  pyproject.toml
sources/watermark/src/watermark/: __main__.py  app.py  argparser.py  generator.py
